--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,6 +67,14 @@ h3 {
     font-size: 10px;
     line-height: 10px;
     letter-spacing: 0.7px;
+
+    @media (max-width: 376px) {
+        display: inline-block;
+        position: absolute;
+        right: 386px;
+        top: 35px;
+        min-width: fit-content;
+    }
 }
 
 .popup-product-price {
@@ -120,6 +128,9 @@ h3 {
 
 .circle {
     border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    text-align: center;
 
     &.grey {
         border: 1px solid gray;
