--- a/src/styles.scss
+++ b/src/styles.scss
@@ -153,3 +153,7 @@ h3 {
     width: 265px;
     background: radial-gradient(51.17% 51.78% at 50% 51.17%, #73909C 0%, #204859 100%);
 }
+
+.cursor-pointer {
+    cursor: pointer;
+}
