--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="data.length > 0">
     <div class="row justify-content-center">
-        <div class="card ml-2 mr-2" *ngFor="let product of data">
+        <div class="card ml-2 mr-2 cursor-pointer" *ngFor="let product of data">
             <div tabindex="1" class="product-template" (mouseenter)="productInFocus(product)"
                 (mouseleave)="productInFocus(product)" (click)="openModal(product)">
                 <p *ngIf="product.selected" class="show-more">{{ 'show more' | uppercase }}</p>
